# Qt-program-test

./: CMakeLists.txt  LICENSE
.github/scripts/: telegram_notify.py
.github/workflows/: telegram-custom.yml
src/: main.cpp  mainwindow.h  mainwindow.ui
